grid_test <- new(acmacs.GridTest, chart, 1, 0.25) - for the second best projection with step 0.25
** dimension annealing
chart <- new(acmacs.Chart, filename)
chart$remove_all_projections()
projection <- chart$new_projection("none", 5) # initially make 5D projection
projection$relax()
projection$dimension_annealing(2)  # convert relaxed projection to 2D
projection$relax()  # relax in 2D
** 
** 

* Changes in 4.2 (2020-03-05)
** Minor fix in hope to debug strange behaviour on some machines

* Changes in 4.1 (2020-03-04)
** Shared lib installation issue under Linux fixed
** Color name handling improvements. If a color is semi-transparent, its value returned in the css rgba() form
** Support for setting and getting fill and outline color opacity
   chart$plot_spec$set_outline(1, "red")
   chart$plot_spec$styles[[1]]$outline
     [1] "red"
   chart$plot_spec$set_outline_opacity(1, 0.1)
   chart$plot_spec$styles[[1]]$outline_opacity
     [1] 0.1019608
   chart$plot_spec$styles[[1]]$outline
     [1] "rgba(255,0,0,0.102)"

* Changes in 4.0 (2019-12-20)
** chart$new_projection_with_layout(minimum_column_basis, matrix(...)), columns of the matrix corresponds to the dimensions of the layout
** optimization with the seeded layout randomization: chart$relax("1280", 2, FALSE, seed)
** acmacs.merge.1() .. acmacs.merge.5(), see https://github.com/acorg/acmacs-chart-2/blob/master/doc/merge-types.org
** chart$relax_incremental()
** map resolution test: specify number of optimization: acmacs.map_resolution_test(chart=chart1, number_of_dimensions=2:3, proportions_to_dont_care=c(0.1, 0.5), number_of_optimizations=1000)
** map resolution test: specify number of replicates: acmacs.map_resolution_test(chart=chart1, number_of_random_replicates_for_each_proportion=25)
** map resolution test: specify directory to save intermediate charts: acmacs.map_resolution_test(chart=chart1, save_charts_to="/path/to/directory")

* Changes in 3.6 (2019-07-10)